--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -7,23 +7,13 @@
     background-size: cover;
     position: relative;
     z-index: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 @media screen and (max-width: 1024px) {
-    .cover__background {
-        max-width: 100%;
-        max-height: 100%;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .cover__background {
-        max-width: 100%;
-        max-height: 100%;
-    }
-}
-
-@media screen and (max-width: 320px) {
     .cover__background {
         max-width: 100%;
         max-height: 100%;
