--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,18 +1,17 @@
 .cover__subtitle {
-    width: 360px;
-    height: 66px;
+    max-width: 360px;
     font-size: 18px;
     line-height: 122%;
     text-align: center;
-    margin: auto;
     opacity: 1;
     z-index: 3;
     position: relative;
+    font-weight: normal;
 }
 
 @media screen and (max-width: 320px) {
     .cover__subtitle {
-        width: 288px;
+        max-width: 288px;
         font-size: 14px;
         line-height: 114%;
     }
