--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -8,11 +8,14 @@
 }
 
 .footer__link:hover {
-    color: #E5E5E5;
+    opacity: 0.8;
+    transform: translate(12px, 0);
+    transition: translate 1.3s ease-in;
 }
 
 @media screen and (max-width: 320px) {
     .footer__link {
         line-height: 300%;
+        font-size: 24px;
     }
 }
