--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -4,13 +4,11 @@
     width: 50%;
     padding-left: 0;
     margin-top: 0;
-    margin-bottom: 24px;
+    margin-bottom: 0;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 690px) {
     .footer__links {
-        display: flex;
         flex-direction: column;
-        flex-basis: 310px;
     }
 }
