--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,9 +2,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: flex-end;
     margin: auto;
     padding-left: 48px;
     padding-right: 48px;
+    padding-bottom: 24px;
+    max-width: 1184px;
 }
 
 @media screen and (max-width: 768px) {
@@ -14,9 +17,9 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 560px) {
     .footer {
         flex-direction: column;
-        flex-basis: 186px;
+        align-items: flex-start;
     }
 }
