--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,13 +1,18 @@
 .header__lang-link {
     padding-top: 18px;
     padding-bottom: 6px;
-    text-decoration: underline;
-    color: #FFFFFF;
+    padding-left: 18px;
     font-size: 24px;
+    color: #FFFFFF;
+    text-decoration: none;
 }
 
 @media screen and (max-width: 320px) {
     .header__lang-link {
         font-size: 18px;
     }
+}
+
+.header__lang-link:active {
+    text-decoration: underline;
 }
