--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,6 +2,14 @@
     display: flex;
     justify-content: space-between;
     padding: 28px 48px 0 48px;
+    max-width: 1184px;
+    margin: auto;
+}
+
+@media screen and (max-width: 768px) {
+    .header {
+        padding: 28px 24px 0 24px;
+    }
 }
 
 @media screen and (max-width: 320px) {
