--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -6,3 +6,15 @@
     letter-spacing: 0.15em;
     text-transform: uppercase;
 }
+
+@media screen and (max-width: 756px) {
+    .lead__caption {
+        padding-left: 24px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .lead__caption {
+        padding-left: 16px;
+    }
+}
