--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -14,8 +14,7 @@
 
 @media screen and (max-width: 768px) {
     .lead__image {
-        width: 100%;
-        height: 480px;
+        max-height: 480px;
     }
 }
 
