--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,15 +1,30 @@
-.lead__subtitle {
-    margin-top: 32px;
-    margin-bottom: 64px;
-    font-size: 30px;
-    line-height: 120%;
-    width: 640px;
-    text-align: center;
-}
-
-@media screen and (max-width: 320px) {
-    .lead__subtitle {
-        font-size: 16px;
-        width: 320px;
-    }
-}
+  .lead__subtitle {
+      margin-top: 32px;
+      margin-bottom: 64px;
+      font-size: 30px;
+      line-height: 120%;
+      max-width: 640px;
+      text-align: center;
+  }
+  
+  @media screen and (max-width: 768px) {
+      .lead__subtitle {
+          margin-top: 16px;
+          margin-bottom: 24px;
+      }
+  }
+  
+  @media screen and (max-width: 590px) {
+      .lead__subtitle {
+          margin-top: 16px;
+          margin-bottom: 24px;
+          max-width: 340px;
+      }
+  }
+  
+  @media screen and (max-width: 320px) {
+      .lead__subtitle {
+          font-size: 16px;
+          max-width: 320px;
+      }
+  }
