--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -3,10 +3,30 @@
     font-size: 96px;
     line-height: 104%;
     text-align: center;
-    margin-bottom: 0;
+    margin: 0;
+    font-weight: 900;
+    padding-top: 56px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 730px) {
+    .lead__title {
+        font-size: 40px;
+        max-width: 450px;
+        line-height: 110%;
+        padding-top: 48px;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .lead__title {
+        font-size: 40px;
+        max-width: 350px;
+        line-height: 110%;
+        padding-top: 48px;
+    }
+}
+
+@media screen and (max-width: 350px) {
     .lead__title {
         font-size: 40px;
         width: 288px;
