--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -17,9 +17,16 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 710px) {
     .place__image {
-        max-width: 440px;
+        padding-top: 32px;
+        align-self: center;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .place__image {
+        width: 100%;
         padding: 32px 0 32px 0;
     }
 }
