--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,7 +1,14 @@
 .place__paragraphs {
     grid-column: 2;
-    grid-row: 2;
     object-fit: contain;
+}
+
+@media screen and (max-width: 710px) {
+    .place__paragraphs {
+        margin-left: 16px;
+        margin-right: 16px;
+        align-self: center;
+    }
 }
 
 @media screen and (max-width: 320px) {
