--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -11,6 +11,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-decoration: none;
+    color: #FFFFFF
 }
 
 @media screen and (max-width: 1024px) {
@@ -18,4 +20,8 @@
         max-width: 100%;
         max-height: 100%;
     }
+}
+
+.cover__background:hover {
+    opacity: 0.8;
 }
