--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,12 +5,11 @@
     width: 106px;
     font-size: 16px;
     line-height: 112%;
+    transition: 1.5s;
 }
 
 .footer__link:hover {
     opacity: 0.8;
-    transform: translate(12px, 0);
-    transition: translate 1.3s ease-in;
 }
 
 @media screen and (max-width: 320px) {
