--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,18 +1,20 @@
-.header__lang-link {
-    padding-top: 18px;
-    padding-bottom: 6px;
-    padding-left: 18px;
-    font-size: 24px;
-    color: #FFFFFF;
-    text-decoration: none;
-}
-
-@media screen and (max-width: 320px) {
-    .header__lang-link {
-        font-size: 18px;
-    }
-}
-
-.header__lang-link:active {
-    text-decoration: underline;
-}
+  .header__lang-link {
+      padding-top: 18px;
+      padding-bottom: 6px;
+      padding-left: 18px;
+      font-size: 24px;
+      color: #FFFFFF;
+      text-decoration: none;
+      transition: opacity 1.5s;
+  }
+  
+  @media screen and (max-width: 320px) {
+      .header__lang-link {
+          font-size: 18px;
+      }
+  }
+  
+  .header__lang-link:hover {
+      opacity: 0.8;
+      transition: 1.5s;
+  }
