--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,21 +1,18 @@
 .lead__image {
     z-index: 0;
     width: 984px;
-    height: 615px;
-    background-size: cover;
+    height: 100%;
+    object-fit: cover;
 }
 
 @media screen and (max-width: 1024px) {
     .lead__image {
         width: 100%;
-        height: 580px;
     }
 }
 
 @media screen and (max-width: 768px) {
-    .lead__image {
-        max-height: 480px;
-    }
+    .lead__image {}
 }
 
 @media screen and (max-width: 320px) {
