--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,17 +3,20 @@
     display: flex;
     flex-direction: column;
     margin: auto;
+    margin-top: 12px;
 }
 
 @media screen and (max-width: 1024px) {
     .places {
         max-width: 928px;
+        margin-top: 8px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .places {
         max-width: 720px;
+        margin-top: 40px;
     }
 }
 
@@ -22,5 +25,6 @@
         max-width: 320px;
         margin-left: 0;
         margin-right: 0;
+        margin-top: 16px;
     }
 }
