--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,10 +3,20 @@
     font-size: 18px;
     line-height: 122%;
     text-align: center;
-    opacity: 1;
-    z-index: 3;
-    position: relative;
     font-weight: normal;
+    margin: 32px auto 245px auto;
+}
+
+@media screen and (max-width: 1024px) {
+    .cover__subtitle {
+        margin-bottom: 195px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .cover__subtitle {
+        margin-bottom: 115px;
+    }
 }
 
 @media screen and (max-width: 320px) {
@@ -14,5 +24,7 @@
         max-width: 288px;
         font-size: 14px;
         line-height: 114%;
+        margin-top: 16px;
+        margin-bottom: 33px;
     }
 }
